--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^0.24.0",
         "formik": "^2.2.9",
         "history": "5",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-google-login": "^5.2.2",
