--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           yarn install
           yarn build
         env:
-          REACT_APP_BACKEND_DOMAIN: https://web-classroom-backend.herokuapp.com
+          REACT_APP_BACKEND_DOMAIN: https://moorssalc.herokuapp.com
           REACT_APP_BACKEND_API_END_POINT: api
           REACT_APP_API_VERSION: v1
 
