--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
