--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "date-fns": "^2.26.0",
@@ -28,6 +29,7 @@
     "history": "5",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
