Update eslint build error

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-REACT_APP_BACKEND_DOMAIN = 'http://localhost:3001'
+REACT_APP_BACKEND_DOMAIN = 'http://moorssalc.herokuapp.com'
 REACT_APP_BACKEND_API_END_POINT = 'api'
 REACT_APP_API_VERSION = 'v1'
 REACT_APP_GOOGLE_API_KEY = '22784196144-ber9ob5rl3dqobqogd4ai0gv11abdt8j.apps.googleusercontent.com'
 REACT_APP_GOOGLE_SECRET = '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'
+DISABLE_ESLINT_PLUGIN=true
