--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
