--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "author": "18127136 - Nguyen Dang Huynh Long, 18127269 - Nguyen Thai Tan",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^31.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
     "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.5.0",
@@ -23,6 +22,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
+    "ckeditor5-custom-build": "./etc/ckeditor/",
     "date-fns": "^2.26.0",
     "formik": "^2.2.9",
     "history": "5",
